--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
 	"bot":{
-		"token":"<BOT TOKEN HERE>",
-		"version":"v0.0.2",
+		"token":"<INSERT BOT TOKEN HERE>",
+		"version":"v0.0.3",
 		"tts":false
 	}, 
 	"admins":[
@@ -9,5 +9,8 @@
 		"user",
 		"ids",
 		"here"
-	]
+	],
+	"server":{
+		"announcements":"announcements"
+	}
 }
