--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,9 @@
 	"bot":{
 		"token":"<INSERT BOT TOKEN HERE>",
 		"version":"v0.0.3",
-		"tts":false
+		"tts":false,
+		"game":"Doot",
+		"ticklength":1
 	}, 
 	"admins":[
 		"admin",
@@ -14,5 +16,4 @@
 		"announcements":"announcements"
 	},
 	
-	"game":"Boop"
 }
