--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
 	"bot":{
 		"token":"<INSERT BOT TOKEN HERE>",
-		"version":"v1.0.0",
+		"version":"alpha 1.0.0",
 		"tts":false,
 		"game":"Doot",
 		"ticklength":1
