--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
 		"token":"<BOT TOKEN HERE>",
 		"version":"v1.0.0-alpha",
 		"tts":false,
-		"game":"with list(entity.human.programmer)",
+		"game":"with entity.human.programmer",
 		"ticklength":1
 	}, 
 	"admins":[
