--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,7 @@
 		"token":"<BOT TOKEN HERE>",
 		"version":"v1.0.0-alpha",
 		"tts":false,
+		"prefix":"!",
 		"game":"with entity.human.programmer",
 		"ticklength":1
 	}, 
