Role checking is now a thing

--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,8 @@
 		"tts":false,
 		"prefix":"!",
 		"game":"with entity.human.programmer",
-		"ticklength":1
+		"ticklength":1,
+		"botmin":"BOTMIN"
 	}, 
 	"admins":[
 		"admin",
