--- a/settings.json
+++ b/settings.json
@@ -1,12 +1,13 @@
 {
 	"bot":{
-		"token":"<BOT TOKEN HERE>",
+		"token":"<INSERT BOT TOKEN HERE>",
 		"version":"v1.0.0-alpha",
 		"tts":false,
 		"prefix":"!",
 		"game":"with entity.human.programmer",
 		"ticklength":1,
-		"botmin":"BOTMIN"
+		"botmin":"BOTMIN",
+		"shutdown_timeout":60
 	}, 
 	"admins":[
 		"admin",
