--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
 	"bot":{
 		"token":"<INSERT BOT TOKEN HERE>",
-		"version":"v1.0.0-alpha",
+		"version":"v0.0.0",
 		"tts":false,
 		"prefix":"!",
 		"game":"with entity.human.programmer",
