added timeToTick function

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
 	"bot":{
-		"token":"<INSERT BOT TOKEN HERE>",
+		"token":"MTc3NTk0MDI3MTU4Mjc0MDQ4.CoK1Aw.63CGV8JR5QlNZWgeL0kiF7Wf0RU",
 		"version":"v0.1",
 		"tts":false,
 		"prefix":"!",
