--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
 	"bot":{
-		"token":"MTc3NTk0MDI3MTU4Mjc0MDQ4.CoK1Aw.63CGV8JR5QlNZWgeL0kiF7Wf0RU",
-		"version":"v0.1",
+		"token":"<INSERT BOT TOKEN HERE>",
+		"version":"v0.2",
 		"tts":false,
 		"prefix":"!",
 		"game":"with entity.human.programmer",
