added !who command, does not work as I wished but is mostly functional.

--- a/settings.json
+++ b/settings.json
@@ -18,7 +18,8 @@
 	],
 	"server":{
 		"announcements":"announcements",
-		"pollChannel":"polls"
+		"pollChannel":"polls",
+		"adminLog":"admin_log"
 	}
 	
 }
