--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
 	"bot":{
-		"token":"<INSERT BOT TOKEN HERE>",
-		"version":"v0.3.1o",
+		"token":"<INSERT BOT ID HERE>",
+		"version":"v0.3.2o",
 		"tts":false,
 		"prefix":"!",
 		"game":"with entity.human.programmer",
