--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
 	"bot":{
-		"token":"<INSERT BOT ID HERE>",
+		"token":"<INSERT BOT TOKEN HERE>",
 		"version":"v0.3.2o",
 		"tts":false,
 		"prefix":"!",
