--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
 	"bot":{
 		"token":"<INSERT BOT TOKEN HERE>",
-		"version":"v0.4.1o",
+		"version":"v0.4",
 		"tts":false,
 		"prefix":"!",
 		"game":"with entity.human.programmer",
