created testing.json for testing, updated .gitignore, updated some co… (#49)
* created testing.json for testing, updated .gitignore, updated some commands, handled permissions for announcments

* changed `change_game(...)` to `change_presence(...)`

* added `!about` command

* fixed `'User' object has no attribute 'nick'`

* implimented markov!

* configured markov abit

* misc changes

using admin because nothing is getting done

--- a/settings.json
+++ b/settings.json
@@ -21,8 +21,13 @@
 			"id":"SERVER ID",
 			"announcements":"CHANNEL ID",
 			"poll":"",
-			"adminLog":""
+			"adminLog":"",
+			"botspam":""
 		}
-	]
+	],
+  "contrib":[
+    "jellopudding",
+    "onionsans."
+  ]
 	
 }
