--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
 		"token":"<INSERT BOT TOKEN HERE>",
 		"version":"v0.6",
 		"tts":false,
-		"prefix":"!",
+		"prefix":"scsi!",
 		"game":"with entity.human.programmer",
 		"ticklength":1,
 		"botmin":"BOTMIN",
